--- a/src/app/pages/admin/panel-page/panel-page.component.html
+++ b/src/app/pages/admin/panel-page/panel-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen p-6">
+<div class="flex flex-col min-h-screen p-4">
   <div class="flex items-center justify-between mb-6">
     <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">Panel de Control</h1>
   </div>
@@ -37,9 +37,9 @@
 
   </div>
 
-  <div class="grid grid-cols-1 sm:grid-cols-3 ">
+  <div class="grid grid-cols-1 lg:grid-cols-3 ">
     <div
-      class="m-2 sm:col-span-1  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+      class="my-2 sm:mx-2 sm:col-span-1  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
       <div class="relative overflow-x-auto ">
         <div class="flex items-center  m-6 justify-between mb-4">
           <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Roles creados</h5>
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div
-      class=" m-2 sm:col-span-2  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+      class=" my-2 sm:mx-2 sm:col-span-2  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
       <div class="relative overflow-x-auto ">
         <div class="flex items-center  m-6 justify-between mb-4">
           <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Ultimas acciones de usuarios</h5>
@@ -117,8 +117,8 @@
       </div>
     </div>
   </div>
-  <div class="grid grid-cols-1 sm:grid-cols-2">
-    <div class="m-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+  <div class="grid grid-cols-1 lg:grid-cols-2">
+    <div class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
       <div class="relative overflow-x-auto ">
         <div class="flex items-center  m-6 justify-between mb-4">
           <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Usuarios conectados</h5>
@@ -159,7 +159,7 @@
         </div>
       </div>
     </div>
-    <div class="m-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+    <div class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
       <div class="relative overflow-x-auto ">
         <div class="flex items-center  m-6 justify-between mb-4">
           <span class="flex items-center space-x-2">
