--- a/src/app/pages/admin/request-service-page/request-service-page.component.html
+++ b/src/app/pages/admin/request-service-page/request-service-page.component.html
@@ -1,1 +1,91 @@
-<p>request-service-page works!</p>,
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10">
+  <div class="mb-6 text-gray-900 dark:text-white">
+    <h1 class="text-2xl font-semibold ">Solicitudes para empezar servicio Tynbiz</h1>
+    <p>Tiendas solicitando empezar servicio tynbiz</p>
+  </div>
+  <div class="flex items-center justify-between pb-4">
+
+    <select id="status" (ngModelChange)="ChangeState($event)" [(ngModel)]="lang"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500">
+      <option ngValue="All" selected>Todos</option>
+      <option ngValue="En revisión">En revisión</option>
+      <option ngValue="En incorporación">En incorporación</option>
+      <option ngValue="Incorporado">Incorporado</option>
+      <option ngValue="Enlace enviado">Enlace enviado</option>
+    </select>
+  </div>
+
+  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">Tienda</th>
+        <th scope="col" class="px-6 py-3">Fecha de solicitud</th>
+        <th scope="col" class="px-6 py-3">Correo</th>
+        <th scope="col" class="px-6 py-3">Estado</th>
+        <th scope="col" class="px-6 py-3">Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (item of resquestList; track item.id) {
+      <tr
+        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+          {{ item.storeName }}
+        </th>
+        <td class="px-6 py-4">{{ item.requestDate }}</td>
+        <td class="px-6 py-4">{{ item.storeEmail }} </td>
+        <td class="px-6 py-4">
+          <span
+            class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full "
+            [ngClass]="{'bg-red-100 text-red-800': item.storeStatusService == 'En revisión','bg-yellow-100 text-yellow-800': item.storeStatusService === 'En incorporación','bg-blue-100 text-blue-800': item.storeStatusService === 'Enlace enviado','bg-green-100 text-green-800': item.storeStatusService === 'Incorporado'}">
+            {{ item.storeStatusService }}
+          </span>
+        </td>
+        <td class="px-6 py-4">
+          <button type="button"
+            class="focus:outline-none text-white bg-gray-500 hover:bg-purple-400 hover:cursor-pointer focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">
+            Gestionar
+          </button>
+        </td>
+      </tr>
+      }
+
+    </tbody>
+  </table>
+  <nav class="flex items-center flex-column flex-wrap md:flex-row justify-between pt-4" aria-label="Table navigation">
+    <span
+      class="text-sm font-normal text-gray-500 dark:text-gray-400 mb-4 md:mb-0 block w-full md:inline md:w-auto">Showing
+      <span class="font-semibold text-gray-900 dark:text-white">1-10</span> of
+      <span class="font-semibold text-gray-900 dark:text-white">1000</span></span>
+    <ul class="inline-flex -space-x-px rtl:space-x-reverse text-sm h-8">
+      <li>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+      </li>
+      <li>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">1</a>
+      </li>
+      <li>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">2</a>
+      </li>
+      <li>
+        <a href="#" aria-current="page"
+          class="flex items-center justify-center px-3 h-8 text-purple-600 border border-gray-300 bg-purple-50 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">3</a>
+      </li>
+      <li>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">4</a>
+      </li>
+      <li>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">5</a>
+      </li>
+      <li>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+      </li>
+    </ul>
+  </nav>
+</div>
